--- a/RegularizeModel.ipynb
+++ b/RegularizeModel.ipynb
@@ -48,14 +48,18 @@
     "        model = tf.keras.models.Model.from_config(model.get_config()) # recreates the model from the updated config file\n",
     "    \n",
     "#     Compiling the model using parameters obtained before reloading the updated model\n",
-    "    model.compile(\n",
-    "        optimizer = optimizer,\n",
-    "        loss = loss,\n",
-    "        metrics = metrics,\n",
-    "        loss_weights = loss_weights,\n",
-    "        weighted_metrics = weighted_metrics,\n",
-    "        run_eagerly = run_eagerly\n",
-    "    )\n",
+    "    if optimizer!=None:\n",
+    "        model.compile(\n",
+    "            optimizer = optimizer,\n",
+    "            loss = loss,\n",
+    "            metrics = metrics,\n",
+    "            loss_weights = loss_weights,\n",
+    "            weighted_metrics = weighted_metrics,\n",
+    "            run_eagerly = run_eagerly\n",
+    "        )\n",
+    "        print ('Regularization successfully edited and model recompiled!')\n",
+    "    else:\n",
+    "        print ('Regularization successfully edited!')\n",
     "       \n",
     "    return model"
    ]
