--- a/mdl_Ch_adjuster.ipynb
+++ b/mdl_Ch_adjuster.ipynb
@@ -16,7 +16,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def mdl_nCh_adjuster (Input_ImgSize, Output_ImgSize):\n",
+    "def mdl_Ch_adjuster (Input_ImgSize, Output_ImgSize):\n",
     "        \n",
     "    assert (len(Output_ImgSize)==3 and len(Output_ImgSize)==3), 'Input_ImgSize and Output_ImgSize each has to be a tuple or a list of 3 elements (height, width, num of channels)'\n",
     "        \n",
@@ -34,11 +34,11 @@
     "        kernel_constraint=None, bias_constraint=None, name=\"SinglePixConv\")(x) \n",
     "    \n",
     "    Out=tf.keras.layers.Lambda(\n",
-    "        Lambda_functions.Channel_GrayScale, name='Ch_GrayScale')(x)\n",
+    "        Lambda_functions.Ch_Norm_255, name='Ch_Norm_255')(x)\n",
     "    \n",
-    "    mdl_nCh_adjuster = tf.keras.Model(inputs=In, outputs=Out, name=\"nCh_adjuster\")\n",
+    "    mdl_Ch_adjuster = tf.keras.Model(inputs=In, outputs=Out, name=\"Ch_adjuster\")\n",
     "    \n",
-    "    return mdl_nCh_adjuster"
+    "    return mdl_Ch_adjuster"
    ]
   },
   {
